--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/younessbennaj/workout-journal#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "gulp": "^4.0.2"
   },
   "dependencies": {
     "@babel/core": "^7.10.5",
-    "gulp-babel": "^8.0.0"
+    "gulp-babel": "^8.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
