--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "gulp": "^4.0.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@babel/core": "^7.10.5",
-    "gulp-babel": "^8.0.0",
-    "react-table": "^7.5.0"
+    "gulp-babel": "^8.0.0"
   }
 }
