install Jest and RTL as dev dependencies

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/younessbennaj/workout-journal#readme",
   "devDependencies": {
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/react": "^10.4.9",
     "babel-loader": "^8.1.0",
     "gulp": "^4.0.2",
+    "jest": "^26.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
