--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
     "presets": [
         "@babel/preset-react"
-    ]
+    ],
+    "env": {
+        "test": {
+            "plugins": [
+                "@babel/plugin-transform-modules-commonjs"
+            ]
+        }
+    }
 }
