--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
+    "axios": "^0.20.0",
     "babel-loader": "^8.1.0",
     "cypress": "^5.0.0",
     "gulp": "^4.0.2",
     "jest": "^26.4.2",
+    "msw": "^0.20.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1",
